[gd_scene load_steps=11 format=3 uid="uid://7p8wceukapmt"]

[ext_resource type="PackedScene" uid="uid://b15lt3hav0ne8" path="res://Blender/SmallFan.gltf" id="1_0q436"]
[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Things/SmallFan.gd" id="1_5hn0o"]
[ext_resource type="PackedScene" uid="uid://nf1bgcn3f8w0" path="res://Scenes_Scripts/Entities/Entity Elements/Interactable.tscn" id="2_abc3f"]
[ext_resource type="AudioStream" uid="uid://dms0yimbb70qo" path="res://Scenes_Scripts/Sounds/jgxxx_fan_looping-small.wav" id="4_ao5i0"]
[ext_resource type="AudioStream" uid="uid://bohu1lq4vlv1" path="res://Scenes_Scripts/Sounds/kwahmah_click-switch.wav" id="5_wda8q"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e587u"]
size = Vector3(0.427856, 0.688477, 0.311768)

[sub_resource type="BoxShape3D" id="BoxShape3D_vpqg4"]
size = Vector3(2, 2, 2)

[sub_resource type="Animation" id="Animation_n71ih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallFan/Ventilator_01_001/blades_02:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nbhvl"]
resource_name = "speen"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallFan/Ventilator_01_001/blades_02:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mspr4"]
_data = {
"RESET": SubResource("Animation_n71ih"),
"speen": SubResource("Animation_nbhvl")
}

[node name="SmallFan" type="RigidBody3D"]
collision_layer = 128
collision_mask = 71
script = ExtResource("1_5hn0o")
monologue_data = Array[String](["[center]This object seems to be a smaller version of the object in the bedroom.[/center]", "[center]This revelation brings me no closer to figuring out its purpose.[/center]"])
monologue_first_line_time = 0.5

[node name="SmallFan" parent="." instance=ExtResource("1_0q436")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.348, -0.054)
shape = SubResource("BoxShape3D_e587u")

[node name="Interactable" parent="." instance=ExtResource("2_abc3f")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.348, -0.054)
shape = SubResource("BoxShape3D_e587u")

[node name="CollisionShape3D" parent="Interactable/InteractableRange" index="0"]
shape = SubResource("BoxShape3D_vpqg4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mspr4")
}

[node name="fan_AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_ao5i0")
max_distance = 8.0
max_polyphony = 4
bus = &"Sounds"

[node name="click_AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_wda8q")
volume_db = 12.0
max_polyphony = 8
bus = &"Sounds"

[connection signal="interact" from="Interactable" to="." method="_on_interactable_interact"]

[editable path="SmallFan"]
[editable path="Interactable"]
